<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyFitnessPal</string>
    <string name="my_fitness_pal">myfitnesspal</string>
    <string name="register">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="height">Height</string>
    <string name="_0_cm">0 cm</string>
    <string name="weight">Weight</string>
    <string name="_0_kg">0 kg</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="page_title">MyFitnessPal</string>
    <string name="signup_error">Please fill all fields with correct values.</string>
    <string name="create_confirm1">Account created! Your daily goal is </string>
    <string name="create_confirm2"> kcal. Do you want to log in now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="insert_email_psw">Insert email and password</string>
    <string name="login_success">Login successful!</string>
    <string name="login_fail">Username or password incorrect.</string>
    <string name="dashboard">Dashboard</string>
    <string name="diary">Diary</string>
    <string name="shopping_list">Shopping list</string>
    <string name="profile">Profile</string>
    <string name="calories">Calories</string>
    <string name="left_goal_foods_exercise">Left = Goal - Foods + Exercise</string>
    <string name="progress">Progress</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="breakfast">Breakfast</string>
    <string name="zero">0</string>
    <string name="add_breakfast">Add breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="add_lunch">Add lunch</string>
    <string name="snack">Snack</string>
    <string name="add_snack">Add snack</string>
    <string name="dinner">Dinner</string>
    <string name="add_dinner">Add dinner</string>
    <string name="add_training">Add training</string>
    <string name="training">Training</string>
    <string name="calories_left">Calories left:</string>
    <string name="title">Title</string>
    <string name="apply_changes">Apply changes</string>
    <string name="add_new_item">Add new item</string>
    <string name="profile_image">Profile image</string>
    <string name="update_weight">Update weight</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="add_message">Do you prefer to use the camera or enter manually?</string>
    <string name="use_camera">Use camera</string>
    <string name="enter_manually">Enter manually</string>
    <string name="insert_cal">Insert number of calories</string>
    <string name="example">Example: 100</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="error_null">You must insert a number</string>
    <string name="add_confirm">Calories added</string>
    <string name="title_training">Choose type of training</string>
    <string name="run">Run</string>
    <string name="cycling">Cycling</string>
    <string name="cardio">Cardio</string>
    <string name="walk">Walk</string>
    <string name="swim">Swim</string>
    <string name="ski">Skiing</string>
    <string name="next">Next</string>
    <string name="training_added">Training added</string>
    <string name="left">left</string>
    <string name="excess">In excess of</string>
    <string name="message_weight">Please insert your actual weight</string>
    <string name="update">Update</string>
    <string name="weight_updated">Weight updated.</string>
    <string name="insert_password">Please insert a new password</string>
    <string name="psw_hint">Must be at least 10 characters</string>
    <string name="error_psw1">You must insert a string</string>
    <string name="error_psw2">Password must be at least 10 characters</string>
    <string name="psw_updated">Password updated!</string>
    <string name="logout_msg">Are you sure?</string>
    <string name="insert_item_here">Insert item here</string>
    <string name="delete">Delete</string>
    <string name="example_item">Example: apple</string>
    <string name="item_title">Please insert item name</string>
    <string name="error_item">You must insert a name</string>
    <string name="item_added">Item added!</string>
    <string name="clear_all">Clear all</string>
    <string name="items_cleared">Items cleared!</string>
    <string name="flash">Volume up to flash on</string>
    <string name="result">Operation completed</string>
    <string name="result2">Result:</string>
    <string name="string_continue">. Continue?</string>
    <string name="error_code_reader">Code read is not a number greater than zero.</string>
    <string name="no_value_collected">No value collected</string>
</resources>