<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/page_diary"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/diary" />

    <item
        android:id="@+id/page_list"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/shopping_list" />

    <item
        android:id="@+id/page_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile" />
</menu>