<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="200sp"
            android:layout_height="200sp"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/username_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/update_weight"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="58dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/primary_dark"
            android:text="@string/update_weight"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/username_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/update_password"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="58dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/primary"
            android:text="@string/change_password"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/update_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/logout"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="58dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/logout"
            android:text="@string/log_out"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_password"/>

        <View android:layout_width="match_parent"
            android:layout_height="60sp"
            app:layout_constraintTop_toBottomOf="@id/logout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>