<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/breakfast_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/breakfast"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/breakfast_cal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/breakfast_view"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_breakfast"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary_dark"
            android:text="@string/add_breakfast"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lunch_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_breakfast"
            android:text="@string/lunch"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/lunch_cal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/add_breakfast" />

        <Button
            android:id="@+id/add_lunch"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary_dark"
            android:text="@string/add_lunch"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/lunch_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/snack_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_lunch"
            android:text="@string/snack"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/snack_cal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/add_lunch" />

        <Button
            android:id="@+id/add_snack"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary_dark"
            android:text="@string/add_snack"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/snack_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dinner_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_snack"
            android:text="@string/dinner"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/dinner_cal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/add_snack" />

        <Button
            android:id="@+id/add_dinner"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary_dark"
            android:text="@string/add_dinner"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/dinner_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/training_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_dinner"
            android:text="@string/training"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/training_cal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/add_dinner" />

        <Button
            android:id="@+id/add_training"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary"
            android:text="@string/add_training"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/training_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/goal_view"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_training"
            android:text="@string/calories_left"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/goal_cal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/add_training" />

        <View android:layout_width="match_parent"
            android:layout_height="126sp"
            app:layout_constraintTop_toBottomOf="@id/goal_cal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>