<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_light">

    <TextView
        android:id="@+id/calories_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/calories"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calories_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/left_goal_foods_exercise"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calories_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/calories_chart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/calories_count" />

    <TextView
        android:id="@+id/goal_count"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/calories_count"
        app:drawableStartCompat="@drawable/ic_baseline_flag_24" />

    <TextView
        android:id="@+id/food_count"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/goal_count"
        app:drawableStartCompat="@drawable/ic_baseline_food_bank_24" />

    <TextView
        android:id="@+id/exercise_count"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/food_count"
        app:drawableStartCompat="@drawable/ic_baseline_local_fire_department_24" />

    <TextView
        android:id="@+id/progress_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/progress"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calories_chart" />

    <TextView
        android:id="@+id/weight_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_title" />

    <TextView
        android:id="@+id/weight_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/last_30_days"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_title" />

    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/weight_chart"
        app:layout_constraintTop_toBottomOf="@id/weight_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>